--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet"  href="style.css" />
+    <link rel="stylesheet"  href="style.css">
     <title> Bruna Amaral Fotográfia</title>
 </head>
 
@@ -16,7 +16,7 @@
 <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="contato.html>">Contato</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </div>
